# JKDBGVM

./: .gitignore  KVM_THROTTLE_AND_PHYS_PAGES.md  Kconfig.host  MAINTAINERS  README.rst  configure  hmp-commands-info.hx  hmp-commands.hx  meson.build  meson_options.txt  pythondeps.toml  qemu-options.hx
accel/kvm/: kvm-accel-ops.c  kvm-all.c  kvm-throttle.c  meson.build
accel/tcg/: cpu-exec-common.c  cputlb.c  icount-common.c  internal-common.h  monitor.c  tcg-runtime.c  tcg-runtime.h
contrib/plugins/: meson.build  opcode.c
ctools/: .gitignore  makefile
ctools/include/: dump.h  gzip_util.h  hmp.h  qmp.h  snapctl.h  snapshot.h  snapshot_list.h  snapshot_store.h  timelog.h
ctools/snapctl/: snapctl-gtk.c  snapctl.c  time.c  time.h
ctools/src/: main.c
docs/: glossary.rst
docs/about/: build-platforms.rst
docs/devel/: codebase.rst  index.rst  irq-logging.rst
docs/system/: device-emulation.rst
hw/: Kconfig  meson.build
hw/arm/: Kconfig  integratorcp.c  musicpal.c  realview.c  versatilepb.c  vexpress.c  xlnx-zcu102.c
hw/char/: Kconfig
hw/core/: irq.c  machine.c  qdev-properties-system.c
hw/cpu/: a9mpcore.c
hw/display/: xlnx_dp.c
hw/i386/: Kconfig  monitor.c  pc.c
hw/isa/: Kconfig  (+2 more)
monitor/: qmp-cmds.c
qapi/: machine.json  meson.build  misc-i386.json  misc.json  qapi-schema.json  ui.json
replay/: meson.build
scripts/: irqlog-analyze.py  meson-buildoptions.sh
stubs/: iothread-lock.c
system/: cpus.c  meson.build  qdev-monitor.c  runstate.c  vl.c  windows-sched-trace-stub.c
ui/: dbus.c  dbus.h  trace-events  vnc.c  vnc.h
util/: log.c
(+72 files in other folders)
